tests/NormalTests/paczka1/fuzzy1/44686280.err
Error in line 6: A5bbQkHuv S626 72,8
Error in line 8: A5bbQkHuv A943 75,8
Error in line 10: A5bbQkHuv S626 8,4
Error in line 19: A5bbQkHuv A711 84,8
Error in line 21: ejg8Zu A711 85,7
Error in line 23: u1teGb S626 75,8
Error in line 24: ejg8Zu S626 8,9
Error in line 20: A5bbQkHuv A943 77,6
